feat: telefono column

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "id": "7a2174ef",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "id": "cb24ee2d",
    "metadata": {},
    "outputs": [],
@@ -1060,6 +1060,120 @@
    "metadata": {},
    "source": [
     "# TELEFONO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66500d2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total de registros: 6607\n",
+      "Teléfonos válidos (arrays): 6554\n",
+      "Teléfonos inválidos (NaN): 53\n",
+      "\n",
+      "Arrays con un teléfono: 6522\n",
+      "Arrays con dos teléfonos: 32\n",
+      "\n",
+      "=== EJEMPLOS DE TELÉFONOS PROCESADOS ===\n",
+      "Primeros 15 ejemplos:\n",
+      "Registro 1: ['77945104']\n",
+      "Registro 2: ['77367402']\n",
+      "Registro 3: ['78232301']\n",
+      "Registro 4: ['79514215']\n",
+      "Registro 5: ['79521468']\n",
+      "Registro 6: ['57101061']\n",
+      "Registro 7: ['79522555']\n",
+      "Registro 8: ['77930045']\n",
+      "Registro 9: ['79545566']\n",
+      "Registro 10: ['79514754']\n",
+      "Registro 11: ['79514754']\n",
+      "Registro 12: ['79521468']\n",
+      "Registro 13: ['79521468']\n",
+      "Registro 14: ['79522793']\n",
+      "Registro 15: ['51922050']\n",
+      "\n",
+      "=== EJEMPLOS DE ARRAYS DOBLES ===\n",
+      "Ejemplo 1: ['79504027', '79504028']\n",
+      "Ejemplo 2: ['79540830', '79540909']\n",
+      "Ejemplo 3: ['79540830', '79540909']\n",
+      "Ejemplo 4: ['79649696', '78739432']\n",
+      "Ejemplo 5: ['78739432', '79649696']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def limpiar_telefono_array(telefono):\n",
+    "    \"\"\"\n",
+    "    Limpia y procesa los números de teléfono, convirtiendo TODO a formato array\n",
+    "    \"\"\"\n",
+    "    if pd.isna(telefono):\n",
+    "        return np.nan\n",
+    "    \n",
+    "    # Convertir a string si es float o int\n",
+    "    if isinstance(telefono, (float, int)):\n",
+    "        telefono = str(int(telefono))\n",
+    "    else:\n",
+    "        telefono = str(telefono)\n",
+    "    \n",
+    "    # Remover espacios y caracteres no numéricos\n",
+    "    telefono_clean = re.sub(r'[^0-9]', '', telefono)\n",
+    "    \n",
+    "    # Si está vacío después de limpiar, retornar NaN\n",
+    "    if not telefono_clean:\n",
+    "        return np.nan\n",
+    "    \n",
+    "    # Si tiene exactamente 16 dígitos, dividir en dos números de 8\n",
+    "    if len(telefono_clean) == 16:\n",
+    "        num1 = telefono_clean[:8]\n",
+    "        num2 = telefono_clean[8:]\n",
+    "        \n",
+    "        # Verificar que ambos números tengan exactamente 8 dígitos\n",
+    "        if len(num1) == 8 and len(num2) == 8:\n",
+    "            return f\"['{num1}', '{num2}']\"\n",
+    "    \n",
+    "    # Para cualquier otro caso, crear un array con un solo elemento\n",
+    "    return f\"['{telefono_clean}']\"\n",
+    "\n",
+    "# Aplicar la función de limpieza a todos los teléfonos\n",
+    "df['TELEFONO'] = df['TELEFONO'].apply(limpiar_telefono_array)\n",
+    "# Aca termina la limpieza de telefono :)\n",
+    "\n",
+    "# Mostrar estadísticas\n",
+    "total_registros = len(df)\n",
+    "telefonos_validos = df['TELEFONO'].notna().sum()\n",
+    "telefonos_invalidos = df['TELEFONO'].isna().sum()\n",
+    "\n",
+    "print(f\"\\nTotal de registros: {total_registros}\")\n",
+    "print(f\"Teléfonos válidos (arrays): {telefonos_validos}\")\n",
+    "print(f\"Teléfonos inválidos (NaN): {telefonos_invalidos}\")\n",
+    "\n",
+    "# Contar arrays simples vs dobles\n",
+    "telefono_series = df['TELEFONO'].dropna()\n",
+    "arrays_dobles = telefono_series.str.count(\"',\").fillna(0) >= 1\n",
+    "arrays_simples = ~arrays_dobles\n",
+    "\n",
+    "print(f\"\\nArrays con un teléfono: {arrays_simples.sum()}\")\n",
+    "print(f\"Arrays con dos teléfonos: {arrays_dobles.sum()}\")\n",
+    "\n",
+    "# Mostrar ejemplos\n",
+    "print(\"\\n=== EJEMPLOS DE TELÉFONOS PROCESADOS ===\")\n",
+    "print(\"Primeros 15 ejemplos:\")\n",
+    "for i in range(min(15, len(df))):\n",
+    "    telefono = df['TELEFONO'].iloc[i]\n",
+    "    if pd.notna(telefono):\n",
+    "        print(f\"Registro {i+1}: {telefono}\")\n",
+    "\n",
+    "# Mostrar algunos ejemplos de arrays dobles\n",
+    "print(\"\\n=== EJEMPLOS DE ARRAYS DOBLES ===\")\n",
+    "arrays_dobles_ejemplos = df[df['TELEFONO'].str.contains(\"',\", na=False)]['TELEFONO'].head(5)\n",
+    "for i, tel in enumerate(arrays_dobles_ejemplos, 1):\n",
+    "    print(f\"Ejemplo {i}: {tel}\")\n"
    ]
   },
   {
@@ -2540,7 +2654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
