feat: nivel, director supervisor columns

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "7a2174ef",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "cb24ee2d",
    "metadata": {},
    "outputs": [],
@@ -1185,6 +1185,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "08ae530c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de registros: 6607\n",
+      "Supervisores válidos: 6600\n",
+      "Supervisores nulos (NaN): 7\n",
+      " 1. PATRICIO NAJARRO ASENCIO\n",
+      " 2. NORA LILIANA FIGUEROA HERNANDEZ\n",
+      " 3. CESAR RIGOBERTO CUC CAAL\n",
+      " 4. MAXIMILIANO CHUB ICAL\n",
+      " 5. AQUILES GIOVANI BAC GUEVARA\n",
+      " 6. JORGE EDUARDO PAQUE LAZARO\n",
+      " 7. LEONARDO OXOM CHEN\n",
+      " 8. EMIILIO RUBEN CAAL GUALIB\n",
+      " 9. RUBEN DARIO CAAL CU\n",
+      "10. OLGA MARINA BUC\n",
+      "11. INGRID AMANDA CAMO TOBAR DE CASTRO\n",
+      "12. ENRIQUE HORACIO MOLINA MUNOZ\n",
+      "13. MARIA ELENA PALMA MOLINA\n",
+      "14. JOSE LUIS XI CUCUL\n",
+      "15. OSCAR GUILLERMO ANIBAL GARCIA HUMBLERS\n",
+      "16. ABNER DAVID CHIQUN TURCIOS\n",
+      "17. JORGE ERWIN CUCUL QUIB\n",
+      "18. DULLIER CLEMENTE BOL BAC\n",
+      "19. OSCAR RENE VENTURA ZAC\n",
+      "20. CECILIO DADAI OVANDO AZURDIA\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_accents_supervisor(text):\n",
+    "    \"\"\"Elimina acentos y tildes de una cadena.\"\"\"\n",
+    "    if pd.isna(text):\n",
+    "        return np.nan\n",
+    "    nkfd_form = unicodedata.normalize('NFKD', str(text))\n",
+    "    return ''.join(c for c in nkfd_form if not unicodedata.combining(c))\n",
+    "\n",
+    "# 1. Convertir a string y normalizar espacios\n",
+    "df['SUPERVISOR'] = df['SUPERVISOR'].astype(str).str.strip()\n",
+    "\n",
+    "# 2. Convertir a mayúsculas\n",
+    "df['SUPERVISOR'] = df['SUPERVISOR'].str.upper()\n",
+    "\n",
+    "# 3. Quitar tildes y acentos\n",
+    "df['SUPERVISOR'] = df['SUPERVISOR'].apply(remove_accents_supervisor)\n",
+    "\n",
+    "# 4. Reemplazar valores vacíos, 'NAN' y espacios en blanco con NaN\n",
+    "df['SUPERVISOR'] = df['SUPERVISOR'].replace({\n",
+    "    '': np.nan, \n",
+    "    'NAN': np.nan,\n",
+    "    'NONE': np.nan,\n",
+    "    'NULL': np.nan\n",
+    "}, regex=False)\n",
+    "\n",
+    "# También reemplazar strings que solo contengan espacios\n",
+    "df['SUPERVISOR'] = df['SUPERVISOR'].replace(r'^\\s*$', np.nan, regex=True)\n",
+    "\n",
+    "# Mostrar estadísticas\n",
+    "print(f\"Total de registros: {len(df)}\")\n",
+    "print(f\"Supervisores válidos: {df['SUPERVISOR'].notna().sum()}\")\n",
+    "print(f\"Supervisores nulos (NaN): {df['SUPERVISOR'].isna().sum()}\")\n",
+    "\n",
+    "# Mostrar (primeros 20)\n",
+    "supervisores_unicos = df['SUPERVISOR'].dropna().unique()[:20]\n",
+    "for i, supervisor in enumerate(supervisores_unicos, 1):\n",
+    "    print(f\"{i:2d}. {supervisor}\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "350a2afd",
    "metadata": {},
@@ -1193,11 +1268,194 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0165cbb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de registros: 6607\n",
+      "Directores válidos: 6574\n",
+      "Directores nulos (NaN): 33\n",
+      "\n",
+      "Total de directores únicos: 3825\n",
+      "\n",
+      "Primeros 20 directores únicos:\n",
+      " 1. GUSTAVO ADOLFO SIERRA POP\n",
+      " 2. GILMA DOLORES GUAY PAZ DE LEAL\n",
+      " 3. VIRGINIA SOLANO SERRANO\n",
+      " 4. HECTOR ROLANDO CHUN POOU\n",
+      " 5. VICTOR HUGO DOMINGUEZ REYES\n",
+      " 6. MYNOR GUSTAVO IPINA ESPANA\n",
+      " 7. HECTOR ARMANDO TEYUL CHEN\n",
+      " 8. HELSON MARCO CHEN GUTIERREZ\n",
+      " 9. MARIA MAGDALENA BOL CU\n",
+      "10. JOSE CUPERTINO REYES GARCIA\n",
+      "11. DAVID WALDEMAR URRUTIA CHOC\n",
+      "12. SAMANTHA GABRIELA DE LA CRUZ MORALES\n",
+      "13. SILVIA BEATRIZ SOTO CHEN\n",
+      "14. JAYRON ARIEL COY CACAO\n",
+      "15. LESLY EUGENIA CHOCOOJ VIDAURRE\n",
+      "16. ZOYLA ARGENTINA MOLLINEDO ALVARADO\n",
+      "17. JUAN PASCUAL LUCAS ANTONIO\n",
+      "18. THELMA MARTINA POP TZIR\n",
+      "19. MARGARITA VILLALOBOS LIGORRIA\n",
+      "20. AXEL ABELARDO CHUB LEAL\n",
+      "\n",
+      "=== EJEMPLOS DE DATOS PROCESADOS ===\n",
+      "Primeros 10 registros después de limpieza:\n",
+      "Registro 1: GUSTAVO ADOLFO SIERRA POP\n",
+      "Registro 2: GILMA DOLORES GUAY PAZ DE LEAL\n",
+      "Registro 3: VIRGINIA SOLANO SERRANO\n",
+      "Registro 4: HECTOR ROLANDO CHUN POOU\n",
+      "Registro 5: VICTOR HUGO DOMINGUEZ REYES\n",
+      "Registro 6: MYNOR GUSTAVO IPINA ESPANA\n",
+      "Registro 7: HECTOR ARMANDO TEYUL CHEN\n",
+      "Registro 8: HELSON MARCO CHEN GUTIERREZ\n",
+      "Registro 9: MARIA MAGDALENA BOL CU\n",
+      "Registro 10: JOSE CUPERTINO REYES GARCIA\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_accents_director(text):\n",
+    "    \"\"\"Elimina acentos y tildes de una cadena.\"\"\"\n",
+    "    if pd.isna(text):\n",
+    "        return np.nan\n",
+    "    nkfd_form = unicodedata.normalize('NFKD', str(text))\n",
+    "    return ''.join(c for c in nkfd_form if not unicodedata.combining(c))\n",
+    "\n",
+    "# 1. Convertir a string y normalizar espacios\n",
+    "df['DIRECTOR'] = df['DIRECTOR'].astype(str).str.strip()\n",
+    "\n",
+    "# 2. Convertir a mayúsculas\n",
+    "df['DIRECTOR'] = df['DIRECTOR'].str.upper()\n",
+    "\n",
+    "# 3. Quitar tildes y acentos\n",
+    "df['DIRECTOR'] = df['DIRECTOR'].apply(remove_accents_director)\n",
+    "\n",
+    "# 4. Reemplazar valores vacíos, 'NAN' y espacios en blanco con NaN\n",
+    "df['DIRECTOR'] = df['DIRECTOR'].replace({\n",
+    "    '': np.nan, \n",
+    "    'NAN': np.nan,\n",
+    "    'NONE': np.nan,\n",
+    "    'NULL': np.nan\n",
+    "}, regex=False)\n",
+    "\n",
+    "# También reemplazar strings que solo contengan espacios\n",
+    "df['DIRECTOR'] = df['DIRECTOR'].replace(r'^\\s*$', np.nan, regex=True)\n",
+    "\n",
+    "# Mostrar estadísticas\n",
+    "print(f\"Total de registros: {len(df)}\")\n",
+    "print(f\"Directores válidos: {df['DIRECTOR'].notna().sum()}\")\n",
+    "print(f\"Directores nulos (NaN): {df['DIRECTOR'].isna().sum()}\")\n",
+    "\n",
+    "# Mostrar valores únicos (primeros 20)\n",
+    "print(f\"\\nTotal de directores únicos: {df['DIRECTOR'].nunique()}\")\n",
+    "print(\"\\nPrimeros 20 directores únicos:\")\n",
+    "directores_unicos = df['DIRECTOR'].dropna().unique()[:20]\n",
+    "for i, director in enumerate(directores_unicos, 1):\n",
+    "    print(f\"{i:2d}. {director}\")\n",
+    "\n",
+    "# Mostrar ejemplos de transformación\n",
+    "print(f\"\\n=== EJEMPLOS DE DATOS PROCESADOS ===\")\n",
+    "print(\"Primeros 10 registros después de limpieza:\")\n",
+    "for i in range(min(10, len(df))):\n",
+    "    director = df['DIRECTOR'].iloc[i]\n",
+    "    print(f\"Registro {i+1}: {director}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "34f8cb9b",
    "metadata": {},
    "source": [
     "# NIVEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3a11204",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== ANÁLISIS DE LA COLUMNA NIVEL ===\n",
+      "Valores únicos en NIVEL:\n",
+      "NIVEL\n",
+      "DIVERSIFICADO    6600\n",
+      "NaN                 7\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Total de registros: 6607\n",
+      "Registros con NIVEL válido: 6600\n",
+      "Registros con NIVEL nulo (NaN): 7\n",
+      "\n",
+      "Ejemplos de valores en NIVEL:\n",
+      " 1. DIVERSIFICADO\n",
+      " 2. DIVERSIFICADO\n",
+      " 3. DIVERSIFICADO\n",
+      " 4. DIVERSIFICADO\n",
+      " 5. DIVERSIFICADO\n",
+      " 6. DIVERSIFICADO\n",
+      " 7. DIVERSIFICADO\n",
+      " 8. DIVERSIFICADO\n",
+      " 9. DIVERSIFICADO\n",
+      "10. DIVERSIFICADO\n",
+      "\n",
+      "================================================================================\n",
+      "RECOMENDACIÓN: ELIMINAR LA COLUMNA NIVEL\n",
+      "================================================================================\n",
+      " ELIMINANDO LA COLUMNA 'NIVEL'...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Análisis de la columna NIVEL\n",
+    "print(\"=== ANÁLISIS DE LA COLUMNA NIVEL ===\")\n",
+    "\n",
+    "# Verificar los valores únicos en la columna NIVEL\n",
+    "print(\"Valores únicos en NIVEL:\")\n",
+    "valores_nivel = df['NIVEL'].value_counts(dropna=False)\n",
+    "print(valores_nivel)\n",
+    "\n",
+    "print(f\"\\nTotal de registros: {len(df)}\")\n",
+    "print(f\"Registros con NIVEL válido: {df['NIVEL'].notna().sum()}\")\n",
+    "print(f\"Registros con NIVEL nulo (NaN): {df['NIVEL'].isna().sum()}\")\n",
+    "\n",
+    "# Mostrar algunos ejemplos de los valores\n",
+    "print(f\"\\nEjemplos de valores en NIVEL:\")\n",
+    "ejemplos_nivel = df['NIVEL'].dropna().head(10)\n",
+    "for i, nivel in enumerate(ejemplos_nivel, 1):\n",
+    "    print(f\"{i:2d}. {nivel}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "# Eliminar la columna NIVEL del DataFrame\n",
+    "print(\" ELIMINANDO LA COLUMNA 'NIVEL'...\")\n",
+    "df = df.drop('NIVEL', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49197063",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## JUSTIFICACIÓN PARA ELIMINAR LA COLUMNA 'NIVEL':\n",
+    "\n",
+    "1. FALTA DE VARIABILIDAD: Una columna que contiene un solo valor constante no aporta información discriminatoria para el análisis, ya que no permite segmentar o diferenciar los datos.\n",
+    "\n",
+    "2. REDUNDANCIA: Los valores NaN probablemente también corresponden a instituciones  de nivel diversificado, pero con información faltante, no a niveles diferentes.\n",
+    "\n",
+    "3. OPTIMIZACIÓN: Eliminar columnas constantes reduce la dimensionalidad del dataset sin pérdida de información relevante, mejorando la eficiencia del procesamiento.\n",
+    "\n",
+    "4. CLARIDAD EN EL ANÁLISIS: Al eliminar esta columna, queda claro que todo el análisis se enfoca exclusivamente en instituciones de nivel diversificado.\n"
    ]
   },
   {
