feat: Sector column

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -1467,6 +1467,104 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "91467efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['PRIVADO', 'OFICIAL', 'MUNICIPAL', 'COOPERATIVA', nan],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"SECTOR\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ee7843cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores únicos ANTES de la limpieza:\n",
+      "['PRIVADO' 'OFICIAL' 'MUNICIPAL' 'COOPERATIVA' nan]\n",
+      "Valores únicos count: 4\n",
+      "\n",
+      "Valores únicos DESPUÉS de la limpieza:\n",
+      "['PRIVADO' 'OFICIAL' 'MUNICIPAL' 'COOPERATIVA' nan]\n",
+      "Valores únicos count: 4\n",
+      "\n",
+      "Total de registros: 6607\n",
+      "Sectores válidos: 6600\n",
+      "Sectores nulos (NaN): 7\n",
+      "\n",
+      "Distribución por SECTOR:\n",
+      "  PRIVADO: 5418 registros\n",
+      "  OFICIAL: 874 registros\n",
+      "  COOPERATIVA: 213 registros\n",
+      "  MUNICIPAL: 95 registros\n",
+      "  nan: 7 registros\n",
+      "\n",
+      "Limpieza de SECTOR completada\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mostrar valores únicos antes de la limpieza\n",
+    "print(\"Valores únicos ANTES de la limpieza:\")\n",
+    "print(df['SECTOR'].unique())\n",
+    "print(f\"Valores únicos count: {df['SECTOR'].nunique()}\")\n",
+    "\n",
+    "# 1. Convertir a string y normalizar espacios\n",
+    "df['SECTOR'] = df['SECTOR'].astype(str).str.strip()\n",
+    "\n",
+    "# 2. Convertir todo a mayúsculas\n",
+    "df['SECTOR'] = df['SECTOR'].str.upper()\n",
+    "\n",
+    "# 3. Reemplazar valores vacíos, 'NAN' y espacios en blanco con NaN\n",
+    "df['SECTOR'] = df['SECTOR'].replace({\n",
+    "    '': np.nan, \n",
+    "    'NAN': np.nan,\n",
+    "    'NONE': np.nan,\n",
+    "    'NULL': np.nan,\n",
+    "    \"nan\": np.nan\n",
+    "}, regex=False)\n",
+    "\n",
+    "# También reemplazar strings que solo contengan espacios\n",
+    "df['SECTOR'] = df['SECTOR'].replace(r'^\\s*$', np.nan, regex=True)\n",
+    "\n",
+    "# Mostrar valores únicos después de la limpieza\n",
+    "print(\"\\nValores únicos DESPUÉS de la limpieza:\")\n",
+    "print(df['SECTOR'].unique())\n",
+    "print(f\"Valores únicos count: {df['SECTOR'].nunique()}\")\n",
+    "\n",
+    "# Mostrar estadísticas\n",
+    "print(f\"\\nTotal de registros: {len(df)}\")\n",
+    "print(f\"Sectores válidos: {df['SECTOR'].notna().sum()}\")\n",
+    "print(f\"Sectores nulos (NaN): {df['SECTOR'].isna().sum()}\")\n",
+    "\n",
+    "# Mostrar conteo por sector\n",
+    "print(f\"\\nDistribución por SECTOR:\")\n",
+    "sector_counts = df['SECTOR'].value_counts(dropna=False)\n",
+    "for sector, count in sector_counts.items():\n",
+    "    print(f\"  {sector}: {count} registros\")\n",
+    "\n",
+    "print(\"\\nLimpieza de SECTOR completada\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "efabfc82",
    "metadata": {},
