feat: AREA column

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -1573,6 +1573,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "fc662fb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores únicos ANTES de la limpieza:\n",
+      "['URBANA' 'RURAL' nan]\n",
+      "Valores únicos count: 2\n",
+      "\n",
+      "Valores únicos DESPUÉS de la limpieza:\n",
+      "['URBANA' 'RURAL' nan]\n",
+      "Valores únicos count: 2\n",
+      "\n",
+      "Total de registros: 6607\n",
+      "Areas válidas: 6599\n",
+      "Areas nulas (NaN): 8\n",
+      "\n",
+      "Distribución por AREA:\n",
+      "  URBANA: 5250 registros\n",
+      "  RURAL: 1349 registros\n",
+      "  nan: 8 registros\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Valores únicos ANTES de la limpieza:\")\n",
+    "print(df['AREA'].unique())\n",
+    "print(f\"Valores únicos count: {df['AREA'].nunique()}\")\n",
+    "\n",
+    "# 1. Convertir a string y normalizar espacios\n",
+    "df['AREA'] = df['AREA'].astype(str).str.strip()\n",
+    "\n",
+    "# 2. Convertir todo a mayúsculas\n",
+    "df['AREA'] = df['AREA'].str.upper()\n",
+    "\n",
+    "# 3. Reemplazar valores vacíos, 'NAN' y espacios en blanco con NaN\n",
+    "df['AREA'] = df['AREA'].replace({\n",
+    "    '': np.nan, \n",
+    "    'NAN': np.nan,\n",
+    "    'NONE': np.nan,\n",
+    "    'NULL': np.nan,\n",
+    "    'SIN ESPECIFICAR': np.nan  # Convertir \"SIN ESPECIFICAR\" a NaN también\n",
+    "}, regex=False)\n",
+    "\n",
+    "# También reemplazar strings que solo contengan espacios\n",
+    "df['AREA'] = df['AREA'].replace(r'^\\s*$', np.nan, regex=True)\n",
+    "\n",
+    "# Mostrar valores únicos después de la limpieza\n",
+    "print(\"\\nValores únicos DESPUÉS de la limpieza:\")\n",
+    "print(df['AREA'].unique())\n",
+    "print(f\"Valores únicos count: {df['AREA'].nunique()}\")\n",
+    "\n",
+    "# Mostrar estadísticas\n",
+    "print(f\"\\nTotal de registros: {len(df)}\")\n",
+    "print(f\"Areas válidas: {df['AREA'].notna().sum()}\")\n",
+    "print(f\"Areas nulas (NaN): {df['AREA'].isna().sum()}\")\n",
+    "\n",
+    "# Mostrar conteo por área\n",
+    "print(f\"\\nDistribución por AREA:\")\n",
+    "area_counts = df['AREA'].value_counts(dropna=False)\n",
+    "for area, count in area_counts.items():\n",
+    "    print(f\"  {area}: {count} registros\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f00fb25f",
    "metadata": {},
